--- a/Tp01/www/templates/tab-acercade.html
+++ b/Tp01/www/templates/tab-acercade.html
@@ -3,6 +3,6 @@
     <h2>Matias De Salvo</h2>
     <img ng-src="{{miFoto}}">
     <h3>Email: matias9387@hotmail.com</h3>
-    <h3>GitHub: github.com/matiaspro3/Practica_Super.git     Branch Tp01</h3>
+    <h3>GitHub: github.com/matiaspro3/Practica_Super.git     Branch Tp01 + master</h3>
   </ion-content>
 </ion-view>
