--- a/Tp01/www/templates/tabs.html
+++ b/Tp01/www/templates/tabs.html
@@ -10,10 +10,13 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-login"></ion-nav-view>
   </ion-tab>
 
+
+   <!-- Dashboard Tab -->
   <!-- Chats Tab -->
   <ion-tab title="Jugar" icon-off="ion-ios-game-controller-b" icon-on="ion-ios-game-controller-b" href="#/tab/jugar">
     <ion-nav-view name="tab-jugar"></ion-nav-view>
   </ion-tab>
+
 
   <!-- Account Tab -->
   <ion-tab title="Acerca de" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/acercade">
